Add links to Global CSS/JS on Special:Preferences
Bug: 62600
Change-Id: I6c367ee6bc657fcc4172299518c796029b8b4ea3

--- a/i18n/core/qqq.json
+++ b/i18n/core/qqq.json
@@ -6,5 +6,8 @@
     },
     "globalcssjs-desc": "{{desc|name=Global CSS/JS|url=https://www.mediawiki.org/wiki/Extension:GlobalCssJs}}",
     "globalcssjs-warning-js": "Notice on top of edit window",
-    "globalcssjs-warning-css": "Notice on top of edit window"
+    "globalcssjs-warning-css": "Notice on top of edit window",
+    "globalcssjs-custom-css-js": "Help message next to links to a user's global.js/global.css pages",
+    "globalcssjs-custom-js": "Link text for link to a user's global.js page",
+    "globalcssjs-custom-css": "Link text for a link to a user's global.css page"
 }
