Add 'namemsg', 'license-name' and COPYING, make 'name' canonical
* 'namemsg' is needed to display the localized extension
  name to the user, instead of 'name'
* 'license-name' has been set to 'GPL-2.0+'
  according to http://spdx.org/licenses/
* the COPYING file is linked from Special:Version
* 'name' is now equal to the directory name and does not contain
  slashes, to support Special:Version/License/* links correctly

Bug: T70863
Change-Id: I92d0d79589de25c612147831ed9a926cb3f17490

--- a/i18n/core/en.json
+++ b/i18n/core/en.json
@@ -5,6 +5,7 @@
 			"Kunal Mehta"
 		]
 	},
+	"globalcssjs-name": "Global CSS/JS",
 	"globalcssjs-desc": "Allows CSS and JavaScript on a central wiki to be loaded for all connected wikis",
 	"globalcssjs-warning-js": "Any JavaScript added to this page will be loaded on all wikis where you have an account.",
 	"globalcssjs-warning-css": "Any CSS added to this page will be loaded on all wikis where you have an account.",
