Link to help documentation on global CSS/JS page edit notice
Also removes label from global.(js|css) message as wikitext does not
get parsed on JS/CSS pages.

Follow up to If9258b2a14061c
Bug: T110516

Change-Id: I5f0823a7d863170d73f53f200adc0238f856b98c

--- a/i18n/central/en.json
+++ b/i18n/central/en.json
@@ -4,6 +4,6 @@
 			"Kunal Mehta"
 		]
 	},
-	"global.js": "/* Any JavaScript here will be loaded for all users on all wikis on every page load ([[:mw:Help:Extension:GlobalCssJs|help]]). */",
-	"global.css": "/* Any CSS here will be loaded for all users on on all wikis every page load ([[:mw:Help:Extension:GlobalCssJs|help]]). */"
+	"global.js": "/* Any JavaScript here will be loaded for all users on all wikis on every page load. See <https://www.mediawiki.org/wiki/Special:MyLanguage/Help:Extension:GlobalCssJs> */",
+	"global.css": "/* Any CSS here will be loaded for all users on on all wikis every page load. See <https://www.mediawiki.org/wiki/Special:MyLanguage/Help:Extension:GlobalCssJs> */"
 }
