--- a/i18n/core/en.json
+++ b/i18n/core/en.json
@@ -10,6 +10,9 @@
 	"globalcssjs-warning-js": "Any JavaScript added to this page will be loaded on all wikis where you have an account.",
 	"globalcssjs-warning-css": "Any CSS added to this page will be loaded on all wikis where you have an account.",
 	"globalcssjs-custom-css-js": "Shared CSS/JavaScript for all wikis ([[:mw:Special:MyLanguage/Help:Extension:GlobalCssJs|more information]]):",
+	"globalcssjs-warning-js": "Any JavaScript added to this page will be loaded on all wikis where you have an account (see [[mw:Help:Extension:GlobalCssJs|documentation]]).",
+	"globalcssjs-warning-css": "Any CSS added to this page will be loaded on all wikis where you have an account (see [[mw:Help:Extension:GlobalCssJs|documentation]]).",
+	"globalcssjs-custom-css-js": "Shared CSS/JavaScript for all wikis:",
 	"globalcssjs-custom-js": "Custom JavaScript",
 	"globalcssjs-custom-css": "Custom CSS",
 	"globalcssjs-delete-css": "Deleting CSS page on user request due to deployment of [[mw:Help:Extension:GlobalCssJs]]",
