Enhance message "globalcssjs-custom-css-js"
Add a link to the help docs for the Extension for info, with
Special:MyLanguage included.

Bug: T72588
Change-Id: Ic0553bcb7f45b3b6dd78f95da30df7bd9c6c1a22

--- a/i18n/core/en.json
+++ b/i18n/core/en.json
@@ -9,7 +9,7 @@
 	"globalcssjs-desc": "Allows CSS and JavaScript on a central wiki to be loaded for all connected wikis",
 	"globalcssjs-warning-js": "Any JavaScript added to this page will be loaded on all wikis where you have an account.",
 	"globalcssjs-warning-css": "Any CSS added to this page will be loaded on all wikis where you have an account.",
-	"globalcssjs-custom-css-js": "Shared CSS/JavaScript for all wikis:",
+	"globalcssjs-custom-css-js": "Shared CSS/JavaScript for all wikis ([[:mw:Special:MyLanguage/Help:Extension:GlobalCssJs|more information]]):",
 	"globalcssjs-custom-js": "Custom JavaScript",
 	"globalcssjs-custom-css": "Custom CSS",
 	"globalcssjs-delete-css": "Deleting CSS page on user request due to deployment of [[mw:Help:Extension:GlobalCssJs]]",
