Update namemsg to convention
Change-Id: I7ebf342fb739d7ae9ae860d0b296f784543865b3

--- a/i18n/core/ast.json
+++ b/i18n/core/ast.json
@@ -4,7 +4,7 @@
 			"Xuacu"
 		]
 	},
-	"globalcssjs-name": "CSS/JS global",
+	"globalcssjs-extensionname": "CSS/JS global",
 	"globalcssjs-desc": "Permite cargar CSS y JavaScript d'una wiki central en toles wikis coneutaes",
 	"globalcssjs-warning-js": "Cualquier JavaScript que s'escriba nesta páxina cargaráse'n toles wikis nes que tenga una cuenta.",
 	"globalcssjs-warning-css": "Cualquier CSS que s'escriba nesta páxina cargaráse'n toles wikis nes que tenga una cuenta.",
