--- a/i18n/core/es.json
+++ b/i18n/core/es.json
@@ -7,7 +7,7 @@
 			"MarcoAurelio"
 		]
 	},
-	"globalcssjs-name": "CSS/JS global",
+	"globalcssjs-extensionname": "CSS/JS global",
 	"globalcssjs-desc": "Permite cargar CSS y JS en un wiki central para que éstos se carguen en todos los wikis conectados",
 	"globalcssjs-warning-js": "El código JavaScript que se añada a esta página se cargará en todos los wikis en los que tengas una cuenta.",
 	"globalcssjs-warning-css": "El código CSS que se añada a esta página se cargará en todos los wikis en los que tengas una cuenta.",
