--- a/i18n/core/uk.json
+++ b/i18n/core/uk.json
@@ -5,7 +5,7 @@
 			"Ата"
 		]
 	},
-	"globalcssjs-name": "Глобальні CSS/JS",
+	"globalcssjs-extensionname": "Глобальні CSS/JS",
 	"globalcssjs-desc": "Дозволяє використовувати CSS і JavaScript на центральному вікі-проекті, який буде завантажуватися для всіх підлеглих вікі-проектів.",
 	"globalcssjs-warning-js": "Будь-яка JavaScript, доданий на цю сторінку, буде завантажуватися на всіх вікі, де у вас є обліковий запис.",
 	"globalcssjs-warning-css": "Будь-який CSS, доданий на цю сторінку, буде завантажуватися на всіх вікі, де у вас є обліковий запис.",
