--- a/i18n/core/bn.json
+++ b/i18n/core/bn.json
@@ -5,7 +5,7 @@
 			"Aftabuzzaman"
 		]
 	},
-	"globalcssjs-name": "বৈশ্বিক CSS/JS",
+	"globalcssjs-extensionname": "বৈশ্বিক CSS/JS",
 	"globalcssjs-warning-js": "কোন জাভাস্ক্রিপ্ট এই পাতায় যোগ করা হলে তা সব উইকিতে লোড হবে যেখানে আপনার অ্যাকাউন্ট আছে।",
 	"globalcssjs-warning-css": "কোন সিএসএস এই পাতায় যোগ করা হলে তা সব উইকিতে লোড হবে যেখানে আপনার অ্যাকাউন্ট আছে।",
 	"globalcssjs-custom-css-js": "সব উইকির জন্য শেয়ারকৃত সিএসএস/জাভাস্ক্রিপ্ট:",
