--- a/i18n/core/frr.json
+++ b/i18n/core/frr.json
@@ -4,7 +4,7 @@
 			"Murma174"
 		]
 	},
-	"globalcssjs-name": "Globaal CSS/JS",
+	"globalcssjs-extensionname": "Globaal CSS/JS",
 	"globalcssjs-custom-css-js": "Gemiansoom CSS/JavaScript för arke Wiki:",
 	"globalcssjs-custom-js": "Salew maaget JavaScript",
 	"globalcssjs-custom-css": "Salew maaget CSS"
