--- a/i18n/core/nl.json
+++ b/i18n/core/nl.json
@@ -9,7 +9,7 @@
 			"Esketti"
 		]
 	},
-	"globalcssjs-name": "Global CSS/JS",
+	"globalcssjs-extensionname": "Global CSS/JS",
 	"globalcssjs-desc": "Maakt het mogelijk om CSS en JavaScript op een centrale wiki op te slaan en die in alle aangesloten wiki's te gebruiken",
 	"globalcssjs-warning-js": "JavaScript die wordt toegevoegd aan deze pagina wordt geladen op alle wiki's waar u een gebruiker hebt.",
 	"globalcssjs-warning-css": "CSS die wordt toegevoegd aan deze pagina wordt geladen op alle wiki's waar u een gebruiker hebt.",
