Added GENDER support for globalcssjs-delete-css and globalcssjs-delete-js
Thread:
https://translatewiki.net/wiki/Thread:Translating_talk:MediaWiki/About_MediaWiki:Globalcssjs-delete-css/en_and_MediaWiki:Globalcssjs-delete-js/en

Change-Id: Iaace795371b20a67c98563715479de7bc36cf30d

--- a/i18n/core/en.json
+++ b/i18n/core/en.json
@@ -15,6 +15,6 @@
 	"globalcssjs-custom-css-js": "Shared CSS/JavaScript for all wikis:",
 	"globalcssjs-custom-js": "Custom JavaScript",
 	"globalcssjs-custom-css": "Custom CSS",
-	"globalcssjs-delete-css": "Deleting CSS page on user request due to deployment of [[mw:Help:Extension:GlobalCssJs]]",
-	"globalcssjs-delete-js": "Deleting JavaScript page on user request due to deployment of [[mw:Help:Extension:GlobalCssJs]]"
+	"globalcssjs-delete-css": "Deleting CSS page on {{GENDER:$1|user}} request due to deployment of [[mw:Help:Extension:GlobalCssJs]]",
+	"globalcssjs-delete-js": "Deleting JavaScript page on {{GENDER:$1|user}} request due to deployment of [[mw:Help:Extension:GlobalCssJs]]"
 }
