Revert "Localisation updates from https://translatewiki.net."
This reverts commit 20899fc26e25ac0f742697b3303c9dfea0aa8fba.

Reason for revert: Broken export

Change-Id: I33a984ae73d874a555442f2a8b2b306db664db40

--- a/i18n/core/nl.json
+++ b/i18n/core/nl.json
@@ -1,10 +1,13 @@
 {
 	"@metadata": {
 		"authors": [
+			"Breghtje",
+			"Esketti",
 			"Mainframe98",
 			"Mar(c)",
 			"Servien",
-			"Siebrand"
+			"Siebrand",
+			"Sjoerddebruin"
 		]
 	},
 	"globalcssjs-extensionname": "Global CSS/JS",
